fix(css): set file input's z-index to make it work in knockout component mode

--- a/src/less/drop-area.less
+++ b/src/less/drop-area.less
@@ -11,6 +11,10 @@
   padding:@drop_area_padding;
   text-align:center;
   vertical-align:middle;
+
+  input[name=qqfile] {
+    z-index:100;
+  }
 }
 
 // On hover
